Fix crash on repeated words in a transcript
Set.of() throws IllegalArgumentException on duplicate elements, so any
sentence that repeats a word killed the assistant mid-run. Bag-of-words
matching now builds a HashSet instead.

Routing is also wrapped so a single malformed sentence can never take
the whole assistant down again - it reports the failure and keeps
listening.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>